--- a/estilos.css
+++ b/estilos.css
@@ -60,12 +60,13 @@ body::-webkit-scrollbar {
 .header__img {
   width: 200px;
   height: 60px;
-  margin-left: 30px;
+  margin-left: 1em;
 }
 
 .header__menu {
-  margin-right: 30px;
+  margin-right: 1em;
   height: 60px;
+  outline: none;
 }
 
 .header__menu ul {
@@ -101,6 +102,8 @@ body::-webkit-scrollbar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  cursor: pointer;
+  outline: none;
 }
 
 .header__menu--profile img {
@@ -132,6 +135,7 @@ body::-webkit-scrollbar {
 
 .main__title {
   font-size: 40px;
+  outline: none;
 }
 
 .main__input {
@@ -297,13 +301,52 @@ body::-webkit-scrollbar {
 .footer a:hover {
   text-decoration: underline;
 }
-/*# sourceMappingURL=estilos.css.map */
 
-@media only screen and (max-width: 600px){
 
-.main__title
-{
-  text-align: center;
+.container{
+  display: inherit;
+  align-items: inherit;
+  justify-content: inherit;
+  max-width: 1000px;
+  height: inherit;
+  flex-wrap: inherit;
+  margin: 0 auto;
+  flex: 1;
 }
 
+/*# sourceMappingURL=estilos.css.map */
+
+@media only screen and (max-width: 1024px){
+
+
+}
+
+@media only screen and (max-width: 767px){
+
+  .main__title{
+    text-align: center;
+  }
+
+}
+
+@media only screen and (max-width: 479px){
+  
+
+  .header__menu--profile p{
+    display: none;
+  }
+  
+  .header__menu{
+    height: auto;
+  }
+
+}
+
+@media only screen and (max-width: 320px){
+    
+  
+  .header__menu ul{
+    margin: 0 0 0 -2em;
+    text-align: center;
+  }
 }
