--- a/estilos.css
+++ b/estilos.css
@@ -60,12 +60,12 @@ body::-webkit-scrollbar {
 .header__img {
   width: 200px;
   height: 60px;
-  margin-left: 1em;
+  margin-left: 3em;
   outline: none;
 }
 
 .header__menu {
-  margin-right: 1em;
+  margin-right: 3em;
   height: 60px;
   outline: none;
 }
@@ -118,7 +118,10 @@ body::-webkit-scrollbar {
 }
 
 .main {
-  -webkit-box-align: center;
+  display: block;
+  text-align: center;
+  margin: 2em 0;
+/*   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   display: -webkit-box;
@@ -131,12 +134,14 @@ body::-webkit-scrollbar {
   height: 300px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          justify-content: center;
+          justify-content: center; */
+          
 }
 
 .main__title {
   font-size: 40px;
   outline: none;
+  margin: 1em 0;
 }
 
 .main__input {
@@ -171,30 +176,21 @@ body::-webkit-scrollbar {
 
 .categories__title {
   color: white;
-  font-size: 20px;
-  position: absolute;
-  padding-left: 30px;
-  width: 100%;
+  font-size: 1.5em;
+  margin: 1em 0 0 0;
+  padding-left: 10px;
 }
 
 .carrousel {
-  margin: 0 30px;
+  margin: 0 .6em;
   overflow-x: scroll;
   position: relative;
-  width: calc(100%-60px);
+  max-width: auto;
+  width: calc(100% - 25px);
 }
 
-/* .carrousel::-webkit-scrollbar {
-    height: 10px;
-    background: rgba(255, 255, 255, 0.513);
-}
-
-.carrousel::-webkit-scrollbar-thumb{
-    background: rgb(255, 255, 255);
-    border-radius: 20px;
-}   */
 .carrousel__container {
-  margin: 70px 0px 20px 0px;  
+  margin: 2em 0px 1.2em 0px;
   padding-bottom: 10px;
   white-space: nowrap;
 }
@@ -237,7 +233,7 @@ body::-webkit-scrollbar {
 .carrousel-item__details {
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.9)), to(rgba(0, 0, 0, 0)));
   background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
-  font-size: 10px;
+  /* font-size: 10px; */
   opacity: 0;
   -webkit-transition: 450ms opaci;
   transition: 450ms opaci;
@@ -264,16 +260,18 @@ body::-webkit-scrollbar {
 }
 
 .carrousel-item__details img {
-  width: 30px;
-  height: 30px;
+  width: 2.3em;
+  height: 2.3em;
 }
 
 .carrousel-item__details--title {
   margin: 2px 0 0 0;
+  font-size: 1em;
 }
 
 .carrousel-item__details--subtitle {
   margin: 0 0 5px 0;
+  font-size: .8em;
 }
 .carrousel-item__details--botton img:hover
 {
@@ -284,6 +282,7 @@ body::-webkit-scrollbar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -295,7 +294,6 @@ body::-webkit-scrollbar {
   color: white;
   cursor: pointer;
   font-size: 14px;
-  padding-left: 30px;
   text-decoration: none;
 }
 
@@ -308,7 +306,7 @@ body::-webkit-scrollbar {
   display: inherit;
   align-items: inherit;
   justify-content: inherit;
-  max-width: 1000px;
+  /* max-width: 1000px; */
   height: inherit;
   flex-wrap: inherit;
   margin: 0 auto;
@@ -322,32 +320,66 @@ body::-webkit-scrollbar {
 
 }
 
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: 768px){
 
   .main__title{
     text-align: center;
   }
 
+  .header__img{
+    margin-left: 1em;
+  }
+  .header__menu{
+    margin-right: 1em;
+  }
 }
 
 @media only screen and (max-width: 479px){
   
 
-  .header__menu--profile p{
+ /*  .header__menu--profile p{
     display: none;
-  }
+  } */
   
   .header__menu{
     height: auto;
   }
-
+  .main{
+    margin: 4em 0;
+  }
+  .main__title {
+    text-align: center;
+    font-size: 2em;
+  }
+  .footer a{
+    font-size: .8em;
+  }
 }
 
-@media only screen and (max-width: 320px){
-    
+@media only screen and (max-width: 375px){
+   
+  .header__menu--profile p{
+    display: none;
+  }
   
   .header__menu ul{
     margin: 0 0 0 -2em;
     text-align: center;
+  }
+
+  .main__title {
+    text-align: center;
+    font-size: 1.9em;
+  }
+  .footer a{
+    font-size: .6em;
+  }
+
+}
+@media only screen and (max-width: 320px){
+  
+  .main__title {
+    text-align: center;
+    font-size: 1.7em;
   }
 }
